# ReClaim

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: README.md  reclaim.tape
docs/: 01-vision.md  02-differentiation.md  03-product-design.md  04-technical-depth.md  05-ai-agent-design.md  06-roadmap.md  07-form-factor-and-cost.md  08-benchmarks-and-results.md  README.md  config-reference.md  windows-testing-guide.md
src/reclaim/: __init__.py  humanize.py
src/reclaim/ai/: __init__.py  agent.py  tools.py
src/reclaim/ai/providers/: __init__.py  base.py  claude.py  ollama.py  openai_compatible.py
src/reclaim/cli/: __init__.py  app.py  dashboard.py
src/reclaim/core/: __init__.py  classifier.py  config.py  history.py  journal.py  model.py  monitor.py  planner.py  preferences.py  project.py  quarantine.py  rules.py  scanner.py
src/reclaim/platform/: __init__.py  base.py  posix.py  windows.py
src/reclaim/safety/: __init__.py  gate.py
tests/: test_ai_agent.py  test_ai_providers.py  test_ai_tools.py  test_classifier.py  test_cli.py  test_cli_chat.py  test_config.py  test_dashboard.py  test_gate.py  test_history.py  test_monitor.py  test_planner.py  test_preferences.py  test_project.py  test_quarantine.py  test_scanner.py
