[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reclaim"
version = "0.1.0"
description = "AI-guided disk-reclamation engine for developers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anurag Chaubey" }]
keywords = ["disk", "cleanup", "developer-tools", "cli", "ai", "storage", "reversible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    # TOML reader for the user config (Phase 3a). stdlib `tomllib` on 3.11+; backport on 3.10.
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# The AI co-pilot (Phase 2) is optional — the engine works fully with it absent (I7).
# BYOK Claude needs the Anthropic SDK; the Ollama backend is stdlib-only.
ai = ["anthropic>=0.69"]

[project.urls]
Homepage = "https://github.com/anuragchaubey1224/ReClaim"
Repository = "https://github.com/anuragchaubey1224/ReClaim"
Issues = "https://github.com/anuragchaubey1224/ReClaim/issues"
Documentation = "https://github.com/anuragchaubey1224/ReClaim/tree/main/docs"

[project.scripts]
reclaim = "reclaim.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/reclaim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
